<resources>
    <string name="app_name">MindBell</string>
    <string name="howToActivate">When the switch at the top is on MindBell reminds us regularly throughout the day of our
        mindfulness practice with display, sound or vibration, encouraging us to pause and become mindful of what we are doing
        and in what state of mind we are in.</string>
    <string name="howToMute">MindBell does not remind while taking phone calls or if ringtone or audio channel are muted. Reminding
        can also be switched off temporarily. For information on how to regulate MindBell please refer to the settings or the
        Help.</string>
    <string name="howToMeditate">Next to the switch is a button to enable meditation mode during which the bell only rings to
        signal the start and end of meditation (or meditation periods).</string>
    <string name="menuSettings">Settings</string>
    <string name="menuAbout">About MindBell</string>
    <string name="menuHelp">Help</string>
    <string name="prefsMutedTillOff">Off</string>
    <string name="emailSubject">E-mail sent by MindBell</string>
    <string name="emailChooseApp">Send mail &#8230;</string>
    <string name="mailInfo1">Please add your question or a description of the problem you are experiencing to the e-mail text,
        otherwise the e-mail will be ignored.</string>
    <string name="mailInfo2">The generated e-mail text contains your version of MindBell and Android plus some device information
        and all log entries produced by MindBell to help finding a possible bug.</string>
    <string name="noEmailClients">There are no email clients installed.</string>
    <string name="preferencesTitle">MindBell Preferences</string>
    <string name="prefsCategorySoundOutput">Sound output</string>
    <string name="prefsExplanationAudioStream">Audio channel information</string>
    <string name="summaryExplanationAudioStream">Choosing an audio channel determines how MindBell plays a sound. This influences
        which volume control to use, whether sounds are muted by do-not-disturb or mute modes and whether internal speaker,
        headphone or bluetooth speaker is used for sound output. As the behaviour is very device specific: Just check it
        out on your phone.</string>
    <string name="prefsAudioStream">Audio channel</string>
    <string name="prefsUseAudioStreamVolumeSetting">Use audio channel volume setting</string>
    <string name="summaryUseAudioStreamVolumeSetting">Usual volume setting of selected audio channel is used</string>
    <string name="summaryDontUseAudioStreamVolumeSetting">Volume settings of MindBell in sections Reminder actions or Meditation
        are used (only if played as alarm)</string>
    <string name="prefsCategoryActiveTimes">Active times and rhythm</string>
    <string name="prefsActive">Reminding on/off</string>
    <string name="summaryActive">Reminding is active</string>
    <string name="summaryNotActive">Reminding is deactivated</string>
    <string name="prefsStart">Remind every day from &#8230;</string>
    <string name="prefsEnd">Remind every day till &#8230;</string>
    <string name="prefsActiveOnDaysOfWeek">Days of week to remind &#8230;</string>
    <string name="prefsFrequency">Remind (about) every hh:mm &#8230;</string>
    <string name="prefsRandomize">Use interval deviation</string>
    <string name="prefsNormalize">Remind to the minute &#8230;</string>
    <string name="summaryRandomize">Reminder interval will vary</string>
    <string name="summaryDontRandomize">Reminder interval is constant</string>
    <string name="prefsCategoryReminderActions">Reminder actions</string>
    <string name="prefsCategoryDisplay">Display</string>
    <string name="prefsShow">Show bell</string>
    <string name="summaryShow">Show bell as reminder</string>
    <string name="summaryDontShow">Don\'t show bell as reminder</string>
    <string name="prefsCategorySound">Sound</string>
    <string name="prefsSound">Play sound</string>
    <string name="summarySound">Play sound as reminder</string>
    <string name="summaryDontSound">Don\'t play sound as reminder</string>
    <string name="prefsReminderBell">Bell sound</string>
    <string name="prefsRingtone">System sound</string>
    <string name="summaryRingtoneNotSet">No system sound selected, play single bell sound</string>
    <string name="prefsVolume">Volume</string>
    <string name="prefsCategoryVibration">Vibration</string>
    <string name="prefsVibrate">Vibrate</string>
    <string name="summaryVibrate">Vibrate as reminder</string>
    <string name="summaryNoVibrate">Don\'t vibrate as reminder</string>
    <string name="prefsPattern">Vibration pattern</string>
    <string name="prefsCategoryStatusNotification">Status notification</string>
    <string name="prefsStatus">Show status icon</string>
    <string name="summaryStatus">Show status notification during reminder</string>
    <string name="summaryNoStatus">No status notification, set and forget</string>
    <string name="prefsStatusVisibilityPublic">Show status text on lock screen</string>
    <string name="summaryStatusVisibilityPublic">Show status text on lock screen</string>
    <string name="summaryStatusVisibilityPrivate">Hide status text on lock screen</string>
    <string name="prefsExplanationQuickSettings">Quick Settings information</string>
    <string name="summaryExplanationQuickSettings">As of Android Oreo it\'s no longer possible to
        keep the status notification up-to-date, so it\'s gone with Android Oreo. MindBell now offers a
        Quick Settings tile which shows the current status of MindBell. Be aware that you have to
        edit your Quick Settings to add the tile to your selection of Quick Settings.</string>
    <string name="prefsCategoryReminderNotification">Reminder notification</string>
    <string name="prefsNotificationOnWearables">Notification on wearables</string>
    <string name="summaryNotificationOnWearables">Show reminder notification on wearables</string>
    <string name="summaryNoNotificationOnWearables">No reminder notification on wearables</string>
    <string name="prefsNotificationTitle">Title of reminder notification</string>
    <string name="prefsNotificationTitleDefault">MindBell &#8230;</string>
    <string name="prefsNotificationText">Text of reminder notification</string>
    <string name="prefsNotificationTextDefault">Breathe and smile</string>
    <string name="prefsNotificationVisibilityPublic">Show reminder notification text on lock screen</string>
    <string name="summaryNotificationVisibilityPublic">Show reminder notification text on lock screen</string>
    <string name="summaryNotificationVisibilityPrivate">Hide reminder notification text on lock screen</string>
    <string name="prefsCategoryMuteRules">Mute rules</string>
    <string name="prefsMuteWithPhone">Don\'t remind if ringtone is muted</string>
    <string name="summaryMuteWithPhone">Don\'t remind if ringtone is muted</string>
    <string name="summaryNoMuteWithPhone">Remind even if ringtone is muted</string>
    <string name="prefsMuteWithAudioStream">Don\'t remind if audio is muted</string>
    <string name="summaryMuteWithAudioStream">Don\'t remind if audio channel is muted</string>
    <string name="summaryNoMuteWithAudioStream">Remind even if audio channel is muted</string>
    <string name="prefsMuteOffHook">Don\'t remind during phone calls</string>
    <string name="summaryMuted">Don\'t remind during phone calls</string>
    <string name="summaryNotMuted">Even remind during phone calls</string>
    <string name="prefsMuteInFlightMode">Don\'t remind in flight mode</string>
    <string name="summaryMutedInFlightMode">Don\'t remind in flight mode</string>
    <string name="summaryNotMutedInFlightMode">Even remind in flight mode</string>
    <string name="prefsCategoryMeditation">Meditation</string>
    <string name="prefsMeditationBeginningBell">Beginning bells</string>
    <string name="prefsMeditationInterruptingBell">Intermediate bells</string>
    <string name="prefsMeditationEndingBell">Ending bells</string>
    <string name="prefsMeditationVolume">Volume</string>
    <string name="prefsCategoryProblemSolving">&constProblemSolving;</string>
    <string name="prefsFAQ">&constFAQ;</string>
    <string name="summaryFAQ">Find answers to frequently asked questions here.</string>
    <string name="prefsBatterySettings">Battery settings</string>
    <string name="summaryBatterySettings">If MindBell does not remind you regularly please check here whether MindBell is excluded
        from battery optimization.</string>
    <string name="prefsUseWorkaroundBell">Extra silence before bell</string>
    <string name="summaryUseWorkaroundBell">Three seconds of silence before bell sounds to avoid distortion on phones that slowly
        increase sound volume - only affects bell sounds, not system sounds. If extra silence is needed by your phone, it
        should already be in the sound file.</string>
    <string name="summaryDontUseWorkaroundBell">Use bell sound as it is</string>
    <string name="prefsStatistics">Internal Statistics</string>
    <string name="summaryStatistics">Show times of occurred or scheduled reminders and meditation bells.</string>
    <string name="prefsSendMail">&constSendMail;</string>
    <string name="summarySendMail">For suggestions or questions not answered in the \'&constFAQ;\' you can send an e-mail with
        log information. Please don\'t forget to add your question or a description of the problem.</string>
    <string name="statusActionMuteFor">Don\'t remind for &#8230;</string>
    <string name="main_message1_popup">How to use MindBell?\nhttp://dknapps.de/mindbell-intro</string>
    <string name="main_message2_popup">What has been changed?\nhttp://dknapps.de/mindbell-changelog</string>
    <string name="main_message3_popup">MindBell does not remind (periodically)?\nhttp://dknapps.de/mindbell-notringing</string>
    <string name="main_message4_popup">Frequently asked questions (FAQ)?\nhttp://dknapps.de/mindbell</string>
    <string name="main_message5_popup">Privacy Policy?\nhttp://dknapps.de/mindbell-privacy</string>
    <string name="keyActiveOnDaysOfWeek" translatable="false">activeOnDaysOfWeek</string>
    <string name="keyActive" translatable="false">active</string>
    <string name="keyBatterySettingsIdOnly" translatable="false">batterySettingsIdOnly</string>
    <string name="keyEnd" translatable="false">end</string>
    <string name="keyFAQ" translatable="false">faqIdOnly</string>
    <string name="keyFrequency" translatable="false">frequency</string>
    <string name="keyMeditationBeginningBell" translatable="false">meditationBeginningBell</string>
    <string name="keyMeditationEndingBell" translatable="false">meditationEndingBell</string>
    <string name="keyMeditationInterruptingBell" translatable="false">meditationInterruptingBell</string>
    <string name="keyMeditationVolume" translatable="false">meditationVolume</string>
    <string name="keyMuteInFlightMode" translatable="false">muteInFlightMode</string>
    <string name="keyMuteOffHook" translatable="false">muteOffHook</string>
    <string name="keyMuteWithPhone" translatable="false">muteWithPhone</string>
    <string name="keyNormalize" translatable="false">normalize</string>
    <string name="keyPattern" translatable="false">pattern</string>
    <string name="keyRandomize" translatable="false">randomize</string>
    <string name="keySendMailIdOnly" translatable="false">sendMailIdOnly</string>
    <string name="keyShow" translatable="false">show</string>
    <string name="keyStart" translatable="false">start</string>
    <string name="keyStatisticsIdOnly" translatable="false">statisticsIdOnly</string>
    <string name="keyUseWorkaroundBell" translatable="false">useWorkaroundBell</string>
    <string name="keyVibrate" translatable="false">vibrate</string>
    <string name="keyVolume" translatable="false">volume</string>
</resources>