<?xml version="1.0" encoding="utf-8"?>
<!--
    MindBell - Aims to give you a support for staying mindful in a busy life -
               for remembering what really counts
   
        Copyright (C) 2010-2014 Marc Schroeder
        Copyright (C) 2014-2016 Uwe Damken
   
    Licensed under the Apache License, Version 2.0 (the "License");
    you may not use this file except in compliance with the License.
    You may obtain a copy of the License at
   
        http://www.apache.org/licenses/LICENSE-2.0
   
    Unless required by applicable law or agreed to in writing, software
    distributed under the License is distributed on an "AS IS" BASIS,
    WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
    See the License for the specific language governing permissions and
    limitations under the License.
 -->


<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

	<PreferenceScreen android:title="@string/prefsCategoryMuteRules">

		<CheckBoxPreference
            android:key="@string/keyMuteWithPhone"
			android:title="@string/prefsMuteWithPhone"
			android:summaryOn="@string/summaryMuteWithPhone"
			android:summaryOff="@string/summaryNoMuteWithPhone"/>
		<CheckBoxPreference
			android:key="@string/keyMuteOffHook"
			android:title="@string/prefsMuteOffHook"
			android:summaryOff="@string/summaryNotMuted"
			android:summaryOn="@string/summaryMuted"/>
		<CheckBoxPreference
			android:key="@string/keyMuteInFlightMode"
			android:title="@string/prefsMuteInFlightMode"
			android:summaryOff="@string/summaryNotMutedInFlightMode"
			android:summaryOn="@string/summaryMutedInFlightMode"/>

	</PreferenceScreen>

	<PreferenceScreen android:title="@string/prefsCategoryMeditation">

		<!-- keyMeditating can only be toggled by the meditation button -->

		<com.googlecode.mindbell.preference.ListPreferenceWithSummaryFix
			android:key="@string/keyMeditationBeginningBell"
			android:title="@string/prefsMeditationBeginningBell"
			android:summary="%s"
			android:entries="@array/bellEntries"
			android:entryValues="@array/bellEntryValues"
			android:dialogTitle="@string/prefsMeditationBeginningBell" />

		<com.googlecode.mindbell.preference.ListPreferenceWithSummaryFix
			android:key="@string/keyMeditationInterruptingBell"
			android:title="@string/prefsMeditationInterruptingBell"
			android:summary="%s"
			android:entries="@array/bellEntries"
			android:entryValues="@array/bellEntryValues"
			android:dialogTitle="@string/prefsMeditationInterruptingBell" />

		<com.googlecode.mindbell.preference.ListPreferenceWithSummaryFix
			android:key="@string/keyMeditationEndingBell"
			android:title="@string/prefsMeditationEndingBell"
			android:summary="%s"
			android:entries="@array/bellEntries"
			android:entryValues="@array/bellEntryValues"
			android:dialogTitle="@string/prefsMeditationEndingBell" />

	</PreferenceScreen>

</PreferenceScreen>
